# hotpatch

./: DEPLOYMENT.md  README.md  hotpatch_content.txt  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/admin/: layout.tsx  page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/features/: page.tsx
app/login/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/register/: page.tsx
app/services/: page.tsx
app/terms/: page.tsx
app/updates/: page.tsx
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/api/: mod.rs
cli/src/bundle/: builder.rs  compressor.rs  mod.rs
cli/src/commands/: keygen.rs  keys.rs  login.rs  mod.rs  patch.rs  release.rs  rollback.rs  status.rs
cli/src/config/: mod.rs
cli/src/signing/: mod.rs
cli/src/utils/: diff.rs  encryption.rs  mod.rs
components/: CtaSection.tsx  FaqItem.tsx  Footer.tsx  Logo.tsx  Navbar.tsx  Providers.tsx
components/admin/: AdminLayout.tsx
components/dashboard/: DashboardLayout.tsx
lib/: api.ts  auth-context.tsx
sdk/: README.md  package.json  rn-ota-sdk.podspec
sdk/android/: build.gradle
sdk/ios/: CrashDetector.swift  HashUtils.swift  HotPatchSDK.swift  OTABridge.m  OTAUpdateManager.swift  PatchUtils.swift  SignatureVerifier.swift
sdk/src/: index.ts  types.ts
server/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
server/cmd/: main.go
server/migrations/: 001_create_apps.sql  002_create_releases.sql  003_create_devices.sql  (+3 more)
(+64 files in other folders)
