[package]
name = "hotpatch-cli"
version = "0.1.0"
edition = "2021"
authors = ["HotPatch OTA"]
description = "CLI tool for publishing OTA updates to React Native apps"
license = "MIT"

[[bin]]
name = "hotpatch"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Progress bars & terminal UI
indicatif = "0.17"
colored = "2"
console = "0.15"
dialoguer = "0.11"

# File operations
zip = "0.6"
walkdir = "2"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"
qbsdiff = "0.1"

# Error handling
anyhow = "1"

# Platform-specific paths
dirs = "5"

# Byte formatting
bytesize = "1.3"
